- Fixed object: Tree (rct2.scenery_small.tjt4)
- Fixed object: Tree (rct2.scenery_small.tjt5)
- Fixed object: Logs (rct2.scenery_small.tml)
- Fixed object: Barrel (fidwell.scenery_small.tbr3)
- Fixed object: Barrel (fidwell.scenery_small.tbr4)
- Fixed object: Graveyard Monument (rct2.scenery_small.tmm2)
- Fixed object: Graveyard Monument (rct2.scenery_small.tmm3)
- Fixed object: Sandstone Skyscraper Walkway (rct2tt.scenery_small.futsky01)
- Fixed object: Roman Palace Cross Section (rct2tt.scenery_large.romnm2x2)
- Updated object: Hiba Tree (rct2.scenery_small.tghc2)
- Updated object: Common Juniper Tree (rct2.scenery_small.tcj)
- Updated object: Caucasian Fir Tree (rct2.scenery_small.tcf)
- Updated object: Red Fir Tree (rct2.scenery_small.trf)
- Updated object: Red Fir Tree (rct2.scenery_small.trf2)
- Updated object: Tree (rct2.scenery_small.ts0)
- Updated object: Tree (rct2.scenery_small.ts1)
- Updated object: Tree (rct2.scenery_small.ts2)
- Updated object: Giraffe Statue (rct2.scenery_small.tgs)
- Updated object: Roof (rct2.scenery_small.sumrf)
- Updated object: Roman Colosseum (rct2.scenery_large.scol)
- Updated object: Roman Column (rct2.scenery_small.trc)
- Updated object: Colonnade (rct2.scenery_large.scln)
- Updated object: Cleopatra's Needle (rct2.scenery_small.ten)
- Updated object: Ruined Statue (rct2.scenery_small.ters)
- Updated object: Stone Block (rct2.scenery_small.terb)
- Updated object: Egyptian Column (rct2.scenery_small.tep)
- Updated object: Egyptian Wall (rct2.scenery_wall.wew)
- Updated object: Bush (rct2.scenery_small.tjb1)
- Updated object: Bush (rct2.scenery_small.tjb2)
- Updated object: Bush (rct2.scenery_small.tjb3)
- Updated object: Bush (rct2.scenery_small.tjb4)
- Updated object: Plant (rct2.scenery_small.tjt6)
- Updated object: Volcano (rct2.scenery_large.svlc)
- Updated object: Broken Wheel (rct2.scenery_small.tbw)
- Updated object: Barrel (rct2.scenery_small.tbr1)
- Updated object: Barrel (rct2.scenery_small.tbr2)