@@ -171,12 +171,12 @@
             "rct2ww.scenery_small.jpflag05",
             "rct2ww.scenery_small.jpflag06",
             "rct2ww.scenery_small.jachtree",
-            "$DAT:0CBD0001|IRJACHTC",
+            "fidwell.scenery_small.jachtree",
             "rct2ww.scenery_small.japchblo",
-            "$DAT:0CBD0001|IRJAPCHC",
+            "fidwell.scenery_small.japchblo",
             "rct2ww.scenery_small.jappintr",
             "rct2ww.scenery_small.japsnotr",
-            "$DAT:0CBD0001|IRJAPSNC",
+            "fidwell.scenery_small.japsnotr",
             "rct2ww.scenery_large.pogodal",
             "rct2ww.scenery_large.pagodam",
             "rct2ww.scenery_large.pagodas",
