@@ -1,0 +1,47 @@
+{
+    "id": "fidwell.scenery_small.jachtree",
+    "authors": ["Frontier Studios"],
+    "version": "1.0",
+    "originalId": "0CBD0001|IRJACHTC|E3D8B30B",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 20,
+        "removalPrice": 15,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 64,
+        "sceneryGroup": "fidwell.scenery_group.trees_dkso",
+        "isTree": true,
+        "shape": "4/4",
+        "hasNoSupports": true,
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -32, "y": -59 },
+      { "path": "images/1.png", "x": -32, "y": -56 },
+      { "path": "images/2.png", "x": -30, "y": -61 },
+      { "path": "images/3.png", "x": -32, "y": -68 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Japanese Cherry Tree",
+            "fr-FR": "Cerisier du Japon",
+            "de-DE": "Japanischer Kirschbaum",
+            "es-ES": "Cerezo japonés",
+            "it-IT": "Ciliegio giapponese",
+            "nl-NL": "Japanse Kersenboom",
+            "sv-SE": "Japanskt körsbärsträd",
+            "zh-CN": "日本-樱桃树",
+            "cs-CZ": "Sakura",
+            "ko-KR": "벚나무",
+            "pl-PL": "Japońskie drzewo wiśniowe",
+            "ru-RU": "Сакура",
+            "pt-BR": "Árvore Cerejeira",
+            "ja-JP": "日本の桜の木",
+            "eo-ZZ": "Japana Ĉerizoarbo",
+            "ca-ES": "Cirerer japonès",
+            "fi-FI": "Japanilainen kirsikkapuu"
+        }
+    }
+}
