@@ -1,0 +1,47 @@
+{
+    "id": "fidwell.scenery_small.japchblo",
+    "authors": ["Frontier Studios"],
+    "version": "1.0",
+    "originalId": "0CBD0001|IRJAPCHC|D1B8AC4C",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 20,
+        "removalPrice": 15,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 80,
+        "sceneryGroup": "fidwell.scenery_group.trees_dkso",
+        "isTree": true,
+        "shape": "4/4",
+        "hasNoSupports": true,
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -27, "y": -86 },
+      { "path": "images/1.png", "x": -32, "y": -82 },
+      { "path": "images/2.png", "x": -30, "y": -90 },
+      { "path": "images/3.png", "x": -32, "y": -83 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Japanese Cherry Blossom Tree",
+            "fr-FR": "Cerisier du Japon en fleur",
+            "de-DE": "Blühender japanischer Kirschbaum",
+            "es-ES": "Cerezo en flor japonés",
+            "it-IT": "Ciliegio giapponese in boccio",
+            "nl-NL": "Bloeiende Japanse Kersenboom",
+            "sv-SE": "Blomstrande japanskt körsbärsträd",
+            "zh-CN": "日本-樱花树",
+            "cs-CZ": "Sakura",
+            "ko-KR": "벚나무",
+            "pl-PL": "Japońska kwitnąca wiśnia",
+            "ru-RU": "Сакура в цвету",
+            "pt-BR": "Árvore Cerejeira Florida",
+            "ja-JP": "日本の桜の木",
+            "eo-ZZ": "Japana Sakuroarbo",
+            "ca-ES": "Cirerer japonès",
+            "fi-FI": "Japanilainen kirsikkapuu"
+        }
+    }
+}
