@@ -96,6 +96,9 @@
 - Fixed object: Barrel (fidwell.scenery_small.tbr4)
 - Fixed object: Graveyard Monument (rct2.scenery_small.tmm2)
 - Fixed object: Graveyard Monument (rct2.scenery_small.tmm3)
+- Fixed object: Japanese Cherry Tree (rct2ww.scenery_small.jachtree)
+- Fixed object: Japanese Cherry Blossom Tree (rct2ww.scenery_small.japchblo)
+- Fixed object: Japanese Snowball Tree (rct2ww.scenery_small.japsnotr)
 - Fixed object: Sandstone Skyscraper Walkway (rct2tt.scenery_small.futsky01)
 - Fixed object: Roman Palace Cross Section (rct2tt.scenery_large.romnm2x2)
 - Updated object: Hiba Tree (rct2.scenery_small.tghc2)
